--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.38",
     "vue-router": "^4.1.5",
     "vuetify": "npm:@vuetify/nightly@next",
+    "vuetify-country-region-select": "^0.1.7",
     "webfontloader": "^1.0.0"
   },
   "devDependencies": {
