--- a/api/package.json
+++ b/api/package.json
@@ -12,10 +12,12 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
     "method-override": "^3.0.0",
     "mongoose": "^6.5.4",
+    "multer": "^1.4.5-lts.1",
     "passport-jwt": "^4.0.0",
     "vuejs": "^3.0.1"
   },
