--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
     "Buffer": "^0.0.0",
     "roboto-fontface": "*",
     "vue": "^3.2.38",
+    "vue-country-code": "^1.1.3",
     "vue-router": "^4.1.5",
+    "vue3-country-region-select": "^1.0.0",
     "vuetify": "npm:@vuetify/nightly@next",
     "vuetify-country-region-select": "^0.1.7",
     "webfontloader": "^1.0.0"
